<resources>
    <string name="app_name">RobotCtrl</string>
    <string name="settings">设置</string>
    <string name="fingerprint">指纹录入</string>
    <string name="robotName">robotName</string>
    <string name="robotLocation">robotLocation</string>
    <string name="robotLocationTitle">robot Location</string>
    <string name="robotNameTitle">Robot name</string>
    <string name="serverIp">serverIp</string>
    <string name="serverIpTitle">Server IP</string>
    <string name="serverPort">serverPort</string>
    <string name="serverPortTitle">Server port</string>
    <string name="list">list</string>
    <string name="controlType">Control Type</string>

    <string name="serialCOM">serialCOM</string>
    <string name="serialCOMTitle">Serial COM</string>
    <string name="serialBaud">serialBaud</string>
    <string name="serialBaudTitle">Serial Baud</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_ad">ADActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="appVersion">RobotCtrl_master_v1.30.36.0926_alpha</string>
    <!--RobotCtrl_master_v1.30.36.0926_alpha-->

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- dialog_setting.xml -->
    <string name="RevIPStr">"接收端IP:"</string>
    <string name="AECTVStr">"AECTV"</string>
    <string name="FECStr">"FEC"</string>
    <string name="NACKStr">"NACK"</string>
    <string name="PauseStr">"Pause"</string>
    <string name="MuteStr">"Mute"</string>
    <string name="HPStr">"HP"</string>
    <string name="VBRStr">"VBR"</string>
    <string name="CameraStr">"Camera"</string>
    <string name="NSStr">"NS"</string>
    <string name="AudioStr">"Audio"</string>
    <string name="InbandDTMFStr">"InbandDTMF"</string>
    <string name="CallSelfStr">"自呼"</string>
    <string name="ConstantBpsStr">"固定码率"</string>
    <string name="ExTransStr">"外部收发"</string>
    <string name="SyncStr">"同步"</string>
    <string name="SourceFilterStr">"端口IP过滤"</string>
    <string name="naluNumStr">"naluNum:"</string>
    <string name="MaxBitRateStr">"最大码率(Kb):"</string>
    <string name="InitLevelStr">"初始档位:"</string>
    <string name="VideoCodecLevelStr">"档位:"</string>
    <string name="qvgaStr">"qvga:10/150&#8211;15/200&#8211;15/280"</string>
    <string name="vgaStr">"vga:15/350&#8211;15/500&#8211;20/600"</string>
    <string name="_720pStr">"720p:10/900&#8211;15/1200&#8211;20/1500"</string>
    <string name="DeleteTextStr">"deleteTextImage"</string>
    <string name="switchDeleteTextStr">"清空/还原"</string>
    <string name="Speaker">"Speaker"</string>
    <string name="UpdateLevelStr">"刷新档位"</string>
    <string name="buttonOKStr">"确认"</string>
    <string name="LogCallBackStr">"LogCB"</string>
    <string name="SaveH264FileStr">"SaveH26X"</string>

    <!-- dialog_dtmfdialer.xml -->
    <string name="Dtmf0Value">"0"</string>
    <string name="Dtmf0Text">"0"</string>
    <string name="Dtmf1Value">"1"</string>
    <string name="Dtmf1Text">"1"</string>
    <string name="Dtmf2Value">"2"</string>
    <string name="Dtmf2Text">"2"</string>
    <string name="Dtmf3Value">"3"</string>
    <string name="Dtmf3Text">"3"</string>
    <string name="Dtmf4Value">"4"</string>
    <string name="Dtmf4Text">"4"</string>
    <string name="Dtmf5Value">"5"</string>
    <string name="Dtmf5Text">"5"</string>
    <string name="Dtmf6Value">"6"</string>
    <string name="Dtmf6Text">"6"</string>
    <string name="Dtmf7Value">"7"</string>
    <string name="Dtmf7Text">"7"</string>
    <string name="Dtmf8Value">"8"</string>
    <string name="Dtmf8Text">"8"</string>
    <string name="Dtmf9Value">"9"</string>
    <string name="Dtmf9Text">"9"</string>
    <string name="DtmfXingValue">"10"</string>
    <string name="DtmfXingText">"*"</string>
    <string name="DtmfJingValue">"11"</string>
    <string name="DtmfJingText">"#"</string>
    <string name="DtmfAValue">"12"</string>
    <string name="DtmfAText">"A"</string>
    <string name="DtmfBValue">"13"</string>
    <string name="DtmfBText">"B"</string>
    <string name="DtmfCValue">"14"</string>
    <string name="DtmfCText">"C"</string>
    <string name="DtmfDValue">"15"</string>
    <string name="DtmfDText">"D"</string>

    <!-- activity_main.xml -->
    <string name="btnAVStartStr">"AVStart"</string>
    <string name="btnStopStr">"Stop"</string>
    <string name="btnConfStr">"Setting"</string>
    <string name="btnExitStr">"Exit"</string>
    <string name="btnSendDTMFStr">"SendDTMF"</string>
    <string name="btnStartSendStr">"StartSend"</string>
    <string name="btnStartRecvStr">"StartRecv"</string>
    <string name="btnSendIFrameStr">"SendIFrame"</string>
    <string name="btnAStartStr">"AStart"</string>
    <string name="btnSwitchStr">"Switch"</string>
    <string name="textViewDownQoSStr">"DownQoS"</string>

</resources>
