<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="服务器地址、端口"
        android:title="服务器">
        <EditTextPreference
            android:defaultValue="60.171.108.155"
            android:inputType="textAutoCorrect"
            android:key="@string/serverIp"
            android:singleLine="true"
            android:title="@string/serverIpTitle"/>
        <EditTextPreference
            android:defaultValue="11028"
            android:inputType="number"
            android:key="@string/serverPort"
            android:singleLine="true"
            android:title="@string/serverPortTitle"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="配置机器人名称"
        android:title="机器人">
        <EditTextPreference
            android:defaultValue="Robot427"
            android:inputType="textAutoComplete"
            android:key="@string/robotName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/robotNameTitle"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="控制">
        <SwitchPreference
            android:key="@string/controlType"
            android:summaryOff="Touch"
            android:summaryOn="Gravity"
            android:switchTextOff="Touch"
            android:switchTextOn="Gravity"
            android:title="@string/controlType"/>
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/lists"
            android:entryValues="@array/listValues"
            android:key="@string/list"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="OK"
            android:title="Sync frequency"/>
    </PreferenceCategory>
    <Preference
        android:summary="WiFi configuration"
        android:title="WiFi">
        <!--NOTE intent调用系统设置-->
        <intent android:action="android.settings.WIFI_SETTINGS"/>
    </Preference>

</PreferenceScreen>