<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeaaa"
    android:orientation="vertical"
    tools:context="zime.ui.ZIMEAVDemoActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="750dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewRevIP"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/RevIPStr" />

        <EditText
            android:id="@+id/editTextRevIP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:hint="@null" 
       	    android:selectAllOnFocus="true" />
            
        <Spinner
            android:id="@+id/spinnerAudioCodecType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" />
        
        <Spinner
            android:id="@+id/spinnerVideoCodecType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:entries="@array/VideoCodecType" />

        <Spinner
            android:id="@+id/spinnerSetLogLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:entries="@array/LogLevel" />
                
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/CheckBoxAECTV"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/AECTVStr" />

        <CheckBox
            android:id="@+id/CheckBoxFEC"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/FECStr" />
        
        <CheckBox
            android:id="@+id/CheckBoxNACK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/NACKStr" />
        
        <CheckBox
            android:id="@+id/CheckBoxPause"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/PauseStr" />
        
        <CheckBox
            android:id="@+id/CheckBoxMute"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/MuteStr" />
        
        <CheckBox
            android:id="@+id/CheckBoxHP"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/HPStr" />
        
    </LinearLayout>

    <LinearLayout
         android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
             
        <CheckBox
            android:id="@+id/CheckBoxVBR"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/VBRStr" />

        <CheckBox
            android:id="@+id/CheckBoxCamera"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/CameraStr" />

        <CheckBox
            android:id="@+id/CheckBoxNS"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/NSStr" />
        
        <CheckBox
            android:id="@+id/CheckBoxAudio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/AudioStr" />
        
        <CheckBox
             android:id="@+id/CheckBoxInbandDTMF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/InbandDTMFStr" />   
             
        <CheckBox
            android:id="@+id/CheckBoxLogCallBack"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/LogCallBackStr" />
                 
    </LinearLayout>

    <LinearLayout
         android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkCallSelf"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/CallSelfStr" />

        <CheckBox
            android:id="@+id/CheckBoxConstantBps"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ConstantBpsStr" />

        <CheckBox
            android:id="@+id/CheckBoxExTrans"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ExTransStr" />

        <CheckBox
            android:id="@+id/CheckBoxSync"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/SyncStr" />

        <CheckBox
            android:id="@+id/CheckBoxSourceFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SourceFilterStr" />
        
        <CheckBox
            android:id="@+id/CheckBoxSaveH264File"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveH264FileStr" />   
    </LinearLayout>
    
   <LinearLayout
       android:id="@+id/linearLayout5"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
              
        <TextView
            android:id="@+id/textViewNaluNum"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/naluNumStr" />
                
        <EditText
            android:id="@+id/editTextNaluNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:hint="@null" />
        
        <TextView
            android:id="@+id/textViewMaxBitRate"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/MaxBitRateStr" />
        
        <EditText
            android:id="@+id/editTextMaxBitRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:hint="@null" />
        
        <TextView
            android:id="@+id/textViewInitLevel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/InitLevelStr" />
        
        <Spinner
            android:id="@+id/SizeIndx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/textViewVideoCodecLevel"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/VideoCodecLevelStr" />
        
        <RelativeLayout
            android:id="@+id/editTextVideoCodecLevelLayout1"
       		android:layout_width="0dp"
       		android:layout_height="match_parent" 
       		android:layout_weight="1">
       		
        	<EditText
        	    android:id="@+id/editTextVideoCodecLevel_QVGA"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_centerVertical="true"
        	    android:hint="@string/qvgaStr"
        	    android:textSize="12sp" />
        	<CheckBox
        	    android:id="@+id/checkBoxQVGA"
        	    android:layout_width="35dp"
        	    android:layout_height="35dp"
        	    android:layout_centerVertical="true"    
        	    android:layout_alignBottom ="@id/editTextVideoCodecLevel_QVGA"
        	    android:layout_alignRight ="@id/editTextVideoCodecLevel_QVGA"
        	    android:text=""/>	
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/editTextVideoCodecLevelLayout2"
       		android:layout_width="0dp"
       		android:layout_height="match_parent" 
       		android:layout_weight="1">
        	
        <EditText
            android:id="@+id/editTextVideoCodecLevel_VGA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/vgaStr"
            android:textSize="12sp" />
        	<CheckBox
        	    android:id="@+id/checkBoxVGA"
        	    android:layout_width="35dp"
        	    android:layout_height="35dp"
        	    android:layout_centerVertical="true"    
        	    android:layout_alignBottom ="@id/editTextVideoCodecLevel_VGA"
        	    android:layout_alignRight ="@id/editTextVideoCodecLevel_VGA"
        	    android:text=""/>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/editTextVideoCodecLevelLayout3"
       		android:layout_width="0dp"
       		android:layout_height="match_parent" 
       		android:gravity="center_vertical" 
       		android:layout_weight="1">
        
        <EditText
            android:id="@+id/editTextVideoCodecLevel_720p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/_720pStr"
            android:textSize="12sp" />
        	<CheckBox
        	    android:id="@+id/checkBox720p"
        	    android:layout_width="35dp"
        	    android:layout_height="35dp"
        	    android:layout_centerVertical="true"    
        	    android:layout_alignBottom ="@id/editTextVideoCodecLevel_720p"
        	    android:layout_alignRight ="@id/editTextVideoCodecLevel_720p"
        	    android:text=""/>
        </RelativeLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <CheckBox
          android:id="@+id/CheckBoxSpeaker"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/Speaker" />
        <Button
            android:id="@+id/buttonUpdateLevel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/UpdateLevelStr" />
        
        <Button
            android:id="@+id/buttonOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonOKStr" />

    </LinearLayout>
    
</LinearLayout>