<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"

    >
    <!--
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ZIMEAVDemoActivity" -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnAVStartStr"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnStopStr"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonConf"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnConfStr"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnExitStr"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/buttonSendDTMF"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnSendDTMFStr"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonStartSend"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnStartSendStr"
            android:textSize="12sp" />
        <Button
            android:id="@+id/buttonStartRecv"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:inputType="none"
            android:text="@string/btnStartRecvStr"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonConfigVideoIntraFrameRefresh"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnSendIFrameStr"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/buttonAStart"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnAStartStr"
            android:textSize="12sp"/>
        <Button
            android:id="@+id/buttonSwitch"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnSwitchStr"
            android:textSize="12sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <SurfaceView
            android:id="@+id/LocalView"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

        <!--         
          <Button
            android:id="@+id/test"
            android:layout_above="@id/LocalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Setting" />
        -->

        <android.opengl.GLSurfaceView
            android:id="@+id/RemoteView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/textViewDownQoS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textColor="#FFFFFF"
            android:text="@string/textViewDownQoSStr" />

    </RelativeLayout>

</LinearLayout>